# bashly-cli

./: .gitignore  README.md  pyproject.toml
src/bashly/: __init__.py  cli.py  config.py  environments.py  executor.py  history.py  llm.py  prompts.py
